--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">MemoPlace</string>
+    <string name="app_name">Run</string>
     <string name="title_activity_maps">Map</string>
 </resources>
